# evolve_backend

./: .gitignore  Cargo.toml  Makefile  backend.dockerfile  backend_nginx.dockerfile  config.toml  log4rs.yml
src/: actix_tool.rs  config.rs  init.rs  main.rs  session.rs
src/api/: user.rs
src/common/: kafka.rs  mod.rs
src/controller/: mod.rs  static_file.rs  upload_file.rs  user.rs  ws.rs
src/controller/middleware/: auth.rs
src/dao/: mod.rs
src/dao/meilisearch/: mod.rs  user.rs
src/dao/pg/: role.rs  user.rs
src/dao/redis/: lua_script.rs  user.rs
src/model/: common.rs  user.rs
src/openapi/: mod.rs  role.rs  user.rs
src/service/: user.rs
src/ws/: handler.rs  hub.rs  mod.rs  server.rs  session.rs
static/lua_scripts/: rooms.lua  rooms_backup.lua  rooms_retrieve_backup.lua
static/ws/: index.html
